--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "formik-mui": "^5.0.0-alpha.0",
     "mdb-react-ui-kit": "^4.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-openlayers": "^0.3.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^2.1.8",
     "react-window": "^1.8.7",
-    "web-vitals": "^2.1.4"
+    "styled-components": "^5.3.5",
+    "web-vitals": "^2.1.4",
+    "wicg-inert": "^3.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
