--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "aastha-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nirjalpraj.github.io/aastha-react/",
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
     "@emotion/react": "^11.9.3",
@@ -30,7 +31,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
